# 1xgpt

./: .gitignore  README.md  build.sh  data.py  eval_utils.py  hello.py  pyproject.toml  setup.py  test_attention.py  train.py  visualize.py
genie/: attention.py  evaluate.py  generate.py  st_mask_git.py  st_transformer.py  utils.py
magvit2/: util.py
magvit2/models/: lfqgan.py
magvit2/modules/: ema.py  util.py
magvit2/modules/diffusionmodules/: improved_model.py
magvit2/modules/discriminator/: model.py
magvit2/modules/losses/: __init__.py  lpips.py
magvit2/modules/vqvae/: quantize.py
nb/: Llama3.1_(8B)-GRPO.ipynb
